fix: Spotify 음악 메타데이터 제거
