# openapi/soundlog-api.yaml
@@ -1173,7 +1173,6 @@ components:
       type: string
       enum:
         - none
-        - spotify
         - melon
         - youtubeMusic
 
@@ -1250,9 +1249,6 @@ components:
         platformUrls:
           type: object
           properties:
-            spotify:
-              type: string
-              format: uri
             melon:
               type: string
               format: uri
